--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>colegioreni</title>
 </head>
-
+<hr>
 <body>
     <h1> COLÉGIO ESTADUAL PROFa. RENI CORREIA GAMPER- EMPN> </h1>
     <p> rua 1° de Maio, n° 100. Manoel Ribas- Paraná - fone:(43)3435-2519 - (43)3435-1332 </p>
@@ -26,10 +26,10 @@
         pela Escola Municipal Renato Siloto - Ensino Fundamental, o Colégio passou a denominar-se Colégio Est. Profª
         Reni Correia Gamper - Ensino de 2º Grau. Neste ano foi implantado o Curso de Educação Geral - Preparação
         Universal. </p>
-
-        Colégio Estadual Profª Reni Correia Gamper 
-        Rua Primeiro de Maio nº 454.
-        Manoel Ribas - Paraná
+<hr>
+        <p>Colégio Estadual Profª Reni Correia Gamper</p> 
+        <p>Rua Primeiro de Maio nº 454.</p>
+        <p>Manoel Ribas - Paraná</p>
 
 </body>
 
