--- a/index.html
+++ b/index.html
@@ -30,6 +30,7 @@
         <p>Colégio Estadual Profª Reni Correia Gamper <br>
         Rua Primeiro de Maio nº 454. <br>
         Manoel Ribas - Paraná <br></p>
+<img src="https://www.nre.seed.pr.gov.br/modules/galeria/uploads/8164/normal_imagem_6.png" alt="">
 
 </body>
 
