--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>colegioreni</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
     <h1> COLÉGIO ESTADUAL PROFa. RENI CORREIA GAMPER- EMPN> </h1>
